AC_INIT(remctld.c)
AC_PREREQ(2.13)
AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_WITH(kerberos,
    [  --with-kerberos=DIR     Location of Kerberos headers and libraries],
    [kerberos=$withval
     KRBLIBS="-L$withval/lib"
     CPPFLAGS="$CPPFLAGS -I$withval/include"],
    [if test x"$prefix" = xNONE ; then
         kerberos=/usr/pubsw
     else
         kerberos=$prefix
     fi])

AC_SEARCH_LIBS(gethostbyname, nsl)
AC_SEARCH_LIBS(socket, socket, ,
    [AC_CHECK_LIB(nsl, socket, LIBS="$LIBS -lsocket -lnsl", , -lsocket)])
AC_SEARCH_LIBS(res_search, resolv)
AC_SEARCH_LIBS(crypt, crypt)

KRBLIBS="$KRBLIBS -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err"

AC_ARG_ENABLE(static,
    [  --enable-static         Link against the static Kerberos libraries],
    [if test x"$enableval" = xyes ; then
         LIBS="-Wl,-Bstatic $KRBLIBS -Wl,-Bdynamic $LIBS"
     else
         LIBS="$KRBLIBS $LIBS"
     fi],
    [LIBS="$KRBLIBS $LIBS"])

AC_TYPE_SIGNAL

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
